add account and calendar

--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,5 @@
+{% set page = "Home" %}
+{% set title = "" %}
 {% extends "base.html" %}
 {% block mainOuter %}
 <section class="page-section clearfix">
