--- a/app/template.html
+++ b/app/template.html
@@ -1,11 +1,12 @@
-{% set title = "Template" %}
+{% set page = "Template" %}
+{% set hi = "tEMplate" %}
 {% extends "base.html" %}
 {% block main %}
 <div class="row">
     <div class="box">
         <div class="col-lg-12">	
             <h2 class="primary-heading">
-                Work in Progress
+                Work in Progress 
             </h2>
             <p>This page is not done yet! We apologize for any inconvenience this may cause.</p>
         </div>
