--- a/app/directory.html
+++ b/app/directory.html
@@ -1,14 +1,19 @@
-{% set page = "Template" %}
+{% set page = "Directory" %}
 {% extends "base.html" %}
 {% block main %}
 <div class="row">
     <div class="box">
         <div class="col-lg-12">	
             <h2 class="primary-heading">
-                Work in Progress 
+                Directory
             </h2>
-            <p>This page is not done yet! We apologize for any inconvenience this may cause.</p>
+            
         </div>
     </div>
 </div>
+{% endblock %}
+{% block scripts %}
+<script>
+
+</script>
 {% endblock %}
