add search label

--- a/app/directory.html
+++ b/app/directory.html
@@ -27,7 +27,8 @@
                 Directory
             </h2>
             <div id="directory-list">
-                <input type="text" class="form-control fuzzy-search">
+                <b>Search Anything:</b>
+                <input type="text" class="form-control fuzzy-search" placeholder="Search by name, phone number, slack username, etc.">
                 <b>Show:</b>
                 <select class="selectpicker form-control" multiple id="filter-select" data-live-search="true">
                     <optgroup label="Scout">
