--- a/app/directory.html
+++ b/app/directory.html
@@ -27,7 +27,7 @@
                 Directory
             </h2>
             <div id="directory-list">
-                <b>Search By Anything:</b>
+                <b>Search:</b>
                 <input type="text" class="form-control fuzzy-search" placeholder="Search by name, phone number, slack username, etc.">
                 <b>Show:</b>
                 <select class="selectpicker form-control" multiple id="filter-select" data-live-search="true">
