--- a/app/account/login.html
+++ b/app/account/login.html
@@ -10,15 +10,8 @@
 			
 
             <div>
-                <div class="form-group">
-                    <label for="email">Email address:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter your email...">
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" class="form-control" id="password" placeholder="Enter your password...">
-                </div>
-                <button class="btn btn-primary btn-block" id="login">Login</button>
+                
+                <button class="btn btn-primary btn-block" id="login">Login via Google</button>
 				<p class="text-danger" id="error"></p>
                 <p id="account-tray" class="text-center"><a href="/account/create.html">Create an account</a> | <a href="/account/forgotpassword.html">Forgot password</a></p>
             </div>
