--- a/app/404.html
+++ b/app/404.html
@@ -5,7 +5,7 @@
     <div class="box">
         <div class="col-lg-12">	
             <h2 class="primary-heading">
-                404 Error - File now found
+                404 Error - File not found
             </h2>
             <p>The file requested was not found at this location. It may have moved, deleted, or renamed.<br>
             You can <a href="/search.html">search</a> for it or <a href="/">return to the home page</a>.</p>
