--- a/app/event-pages.html
+++ b/app/event-pages.html
@@ -1,14 +1,79 @@
-{% set page = "Template" %}
+{% set page = "Event Pages" %}
 {% extends "base.html" %}
+{% block styles %}
+<link href="/css/bootstrap-select.min.css" rel="stylesheet">
+{% endblock %}
 {% block main %}
 <div class="row">
-    <div class="box">
+    <div class="box w-100">
         <div class="col-lg-12">	
             <h2 class="primary-heading">
-                Work in Progress 
+                Event Pages
             </h2>
-            <p>This page is not done yet! We apologize for any inconvenience this may cause.</p>
+            <div id="event-list">
+                <b for="event-list-search">Search Events:</b>
+                <input type="text" class="form-control fuzzy-search" id="event-list-search" placeholder="e.g. CASA 2018">
+                <form class="pt-1">
+                    <div class="row">
+                        <div class="col">
+                        <br>
+                            <button type="button" class="btn btn-primary btn-block sort" data-sort="date">Sort by date <span class="caret caret-up hidden"><i class="fas fa-caret-up"></i></span><span class="caret caret-down hidden"><i class="fas fa-caret-down"></i></span></button>
+                        </div>
+                        <div class="col">
+                        <br>
+                            <button type="button" class="btn btn-primary btn-block sort" data-sort="name">Sort by name <span class="caret caret-up hidden"><i class="fas fa-caret-up"></i></span><span class="caret caret-down hidden"><i class="fas fa-caret-down"></i></span></button>
+                        </div>
+                        <div class="col">
+                        <b>Show events in:</b>
+                            <select class="selectpicker form-control" multiple data-actions-box="true">
+                                <option selected>the future</option>
+                                <option data-divider="true"></option>
+                                <option>2018</option>
+                                <option>2017</option>
+                                <option>2016</option>
+                            </select>
+
+                        </div>
+                    </div>
+                </form>
+                <p id="modified-settings" class="hidden"> Modified search/sort settings saved in URL. <a href="?#">Reset to default settings</a>. </p>
+                <hr>
+                <ul class="list">
+                    <li><a href=""><span class="date">10/5/18</span><span class="date-written hidden">September 2018</span> - <span class="name">Bike Trail</span></a></li>
+                    <li><a href=""><span class="date">10/8/18 to 10/9/18</span><span class="date-written hidden">September 2018</span> - <span class="name">CASA</span></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
+{% endblock %}
+{% block scripts %}
+<script src="/fonts/fontawesome/fontawesome.js"></script>
+<script src="/fonts/fontawesome/solid.js"></script>
+<script src="/js/list.min.js"></script>
+<script src="/js/bootstrap-select.min.js"></script>
+<script>
+var options = {
+  valueNames: ["name", "date", "date-written"]
+};
+var list = new List('event-list', options);
+
+$(document).ready(function() {
+    $('#event-list .sort').on('click', function () {
+        
+        if ($(this).hasClass("asc")) {
+            $(".caret").addClass("hidden");
+            $(this).find(".caret.caret-up").removeClass("hidden");
+        } else if ($(this).hasClass("desc")) {
+            $(".caret").addClass("hidden");
+            $(this).find(".caret.caret-down").removeClass("hidden");
+        }
+        
+    });
+    //If on moible, tell seectpicker to default to system default select.
+    if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
+        $(".selectpicker").selectpicker("mobile");
+    }
+});
+</script>
 {% endblock %}
