--- a/app/event-pages.html
+++ b/app/event-pages.html
@@ -13,7 +13,7 @@
         display:inline;
     }
 
-    .sort.desc .caret.caret-up {
+    .sort.desc .caret.caret-down {
         display:inline;
     }
     #date-select[readonly] {
@@ -41,11 +41,11 @@
                     <div class="row">
                         <div class="col">
                         <br>
-                            <button type="button" class="btn btn-primary btn-block sort" data-sort="date">Sort by date <span class="caret caret-up hidden"><i class="fas fa-caret-up"></i></span><span class="caret caret-down hidden"><i class="fas fa-caret-down"></i></span></button>
+                            <button type="button" class="btn btn-primary btn-block sort" data-sort="date">Sort by date <span class="caret caret-up "><i class="fas fa-caret-up"></i></span><span class="caret caret-down"><i class="fas fa-caret-down"></i></span></button>
                         </div>
                         <div class="col">
                         <br>
-                            <button type="button" class="btn btn-primary btn-block sort" data-sort="name">Sort by name <span class="caret caret-up hidden"><i class="fas fa-caret-up"></i></span><span class="caret caret-down hidden"><i class="fas fa-caret-down"></i></span></button>
+                            <button type="button" class="btn btn-primary btn-block sort" data-sort="name">Sort by name <span class="caret caret-up "><i class="fas fa-caret-up"></i></span><span class="caret caret-down"><i class="fas fa-caret-down"></i></span></button>
                         </div>
                         <div class="col">
                         <b>Show events in:</b>
