add action url for forgot password

--- a/app/account/create.html
+++ b/app/account/create.html
@@ -55,7 +55,7 @@
             </div>
             <button class="btn btn-primary btn-block" id="next-btn">Next</button>
             <p class="text-danger" id="error"></p>
-            <p id="account-tray" class="text-center"><a href="/account/login.html">Login</a> | <a href="/account/forgotpassword.html">Forgot password</a></p>
+            <p id="account-tray" class="text-center"><a href="/account/login.html">Login</a> | <a href="/account/resetpassword.html">Forgot password</a></p>
         </div>
         <div class="col-lg-12 hidden" id="check-email">
             <h2 class="primary-heading">Check your email!</h2>
