--- a/app/account/index.html
+++ b/app/account/index.html
@@ -9,7 +9,7 @@
             <h2 class="primary-heading">Your Account</h2>
 
             <p>
-                You are logged in as <span class="username"></span>.
+                You are logged in as <span class="user-displayname">Loading...</span>.
             </p>
 
         </div>
