--- a/app/account/logout.html
+++ b/app/account/logout.html
@@ -13,6 +13,8 @@
                 <p>
                     You have been successfully logged out.
                 </p>
+                <p class="text-center"> <a href="/account/login.html" class="preserve-state">Login again</a> </p>
+
             </div>
 
         </div>
