--- a/app/account/resetpassword.html
+++ b/app/account/resetpassword.html
@@ -20,7 +20,7 @@
 
 				<button class="btn btn-primary btn-block" id="send">Send Reset Email</button>
 				<p class="text-danger" id="error"></p>
-				<p id="account-tray" class="text-center"><a href="/account/login.html" id="login-link">Login</a> | <a href="/account/create.html" id="create-link">Create Account</a></p>
+				<p id="account-tray" class="text-center"><a href="/account/login.html" id="login-link" class="preserve-state">Login</a> | <a href="/account/create.html" class="preserve-state" id="create-link">Create Account</a></p>
 			</div>
 		</div>
 		<div class="col-lg-12 hidden" id="success-box">
@@ -34,11 +34,12 @@
 			</div>
 		</div>
 		<div class="col-lg-12 hidden" id="error-box">
-			<h2 class="primary-heading">An Error Occured!</h2>
+			<h2 class="primary-heading">An Error Occurred!</h2>
 
 
-			<div>
+			<p>
 				<p><span class="error-message">An Unknown error occurred</span> (Code: <span class="error-code">UNKNOWN_ERR</span>).</p>
+				<p class="text-center"><a href="/login.html" class="preserve-state">Login</a></p>
 
 			</div>
 		</div>
@@ -50,10 +51,7 @@
 {% block scripts %}
 <script>
 
-	if (getQuery("continue") != "" && getQuery("continue") != null) {
-		$("#login-link").attr("href", "/account/login.html?continue=" + getQuery("continue"));
-		$("#create-link").attr("href", "/account/create.html?continue=" + getQuery("continue"));
-	}
+
 	$("#send").click(function() {
 		$("#error").text("");
 		var email = $("#email").val();
