--- a/app/account/create.html
+++ b/app/account/create.html
@@ -16,7 +16,7 @@
         <div class="col-lg-12" id="nokey">
             <h2 class="primary-heading">Create Account</h2>
 			<p class="text-muted">Please contact the webmaster(<a class="webmaster-email">Jeffrey Meng</a>) to get a create link to create your account.</p>
-
+			<p class="text-center"><a href="/account/login.html" class="preserve-state">Login instead</a></p>
 
         </div>
     </div>
@@ -33,7 +33,7 @@
                     Please enter a valid email.
                 </div>
                 <div class="invalid-feedback hidden" id="em-validation-inuse">
-                    The email provided is already used in an account. <a href="/account/login" class="text-danger">Login</a> instead?
+                    The email provided is already used in an account. <a href="/account/login.html" class="preserve-state">Login</a> instead?
                 </div>
             </div>
             <div class="form-group">
@@ -55,7 +55,7 @@
             </div>
             <button class="btn btn-primary btn-block" id="next-btn">Next</button>
             <p class="text-danger" id="error"></p>
-			<p id="account-tray" class="text-center"><a href="/account/login.html" id="login-link">Login</a> | <a href="/account/resetpassword.html" id="forgot-password-link">Forgot password</a></p>
+			<p id="account-tray" class="text-center"><a href="/account/login.html" id="login-link" class="preserve-state">Login</a> | <a href="/account/resetpassword.html" id="forgot-password-link" class="preserve-state">Forgot password</a></p>
         </div>
         <div class="col-lg-12 hidden" id="check-email">
             <h2 class="primary-heading">Check your email!</h2>
@@ -63,7 +63,7 @@
             <p><a href="#" class="text-center resend" id="resend">Resend the verification email</a>
                 <span id="resend-countdown" class="resend hidden">You can resend the verification email in <b class="resend-time-remaining">Synchronizing...</b> second<span class="resend-plural">s</span>.</span>
                 <span id="resend-success" class="resend hidden">Email successfully resent. You can resend the verification email again in <b class="resend-time-remaining">60</b> second<span class="resend-plural">s</span>.</span>
-                <span id="error-resending" class="resend hidden">Error resending. <a href="/account/create.html">Please reload</a> to try again.</span>
+                <span id="error-resending" class="resend hidden">Error resending. <a href="/account/create.html" class="preserve-state">Please reload</a> to try again.</span>
                 <span id="resend-loading" class="resend hidden">Resending email...</span>
             </p>
         </div>
@@ -81,10 +81,7 @@
 {% block scripts %}
 <script id="scripts">
 
-	if (getQuery("continue") != "" && getQuery("continue") != null) {
-		$("#login-link").attr("href", "/account/create.html?continue=" + getQuery("continue"));
-		$("#forgot-password-link").attr("href", "/account/resetpassword.html?continue=" + getQuery("continue"));
-	}
+
     firebase.auth().onAuthStateChanged(function (user) {
         if (user) {
 
@@ -110,7 +107,7 @@
                         } else {
 
                             $(".sent-date").text(getHumanDate(dateobj));
-                            $(".orig-email").text(user.providerData[0].email);
+                            $(".orig-email").text(user.email);
 							startResendTimer(true);
 
 						}
@@ -125,7 +122,7 @@
 					}
                     console.log(data);
                     $(".sent-date").text(getHumanDate(data));
-                    $(".orig-email").text(user.providerData[0].email);
+                    $(".orig-email").text(user.email);
                 }
                 $("#loading").addClass("hidden");
                 $("#main-box").removeClass("hidden");
@@ -146,7 +143,7 @@
 						startResendTimer();
 
 						$(".sent-date").text(getHumanDate(dateobj));
-						$(".orig-email").text(user.providerData[0].email);
+						$(".orig-email").text(user.email);
 					}
                 });
 
