add ability to reverse email changes

--- a/app/account/resetpassword.html
+++ b/app/account/resetpassword.html
@@ -51,7 +51,9 @@
 {% block scripts %}
 <script>
 
-
+	if (getQuery("email")) {
+		$("#email").val(getQuery("email"));
+	}
 	$("#send").click(function() {
 		$("#error").text("");
 		var email = $("#email").val();
