--- a/app/account/action.html
+++ b/app/account/action.html
@@ -34,7 +34,7 @@
 <div class="row col-lg-12 hidden" id="success-box">
 	<div class="box w-100">
 		<div class="col-lg-12">
-			<h2 class="primary-heading success-title">An Unknown Error Occurred</h2>
+			<h2 class="primary-heading success-title">Success</h2>
 			<div class="success-body">
 
 			</div>
@@ -252,7 +252,59 @@
 			}
 		});
 	}
+	function handleRecoverEmail(auth, actionCode) {
 
+		var restoredEmail = null;
+		// Confirm the action code is valid.
+		auth.checkActionCode(actionCode).then(function(info) {
+			// Get the restored email address.
+			restoredEmail = info.data.email;
+
+			// Revert to the old email.
+			return auth.applyActionCode(actionCode);
+		}).then(function() {
+			// Account email reverted to restoredEmail
+
+			// TODO: Display a confirmation message to the user.
+			$("#success-title").text("The email change has been reverted back to " + restoredEmail);
+			// You might also want to give the user the option to reset their password
+			// in case the account was compromised:
+			$("#success-body").html("If you did not request the original email change then your account may have been compromised. Click <a href="/account/resetpassword.html" id="pw-reset-link">here</a> to reset your password.");
+			$("#pw-reset-link").attr("href", "/account/resetpassword.html?email=" + restoredEmail);
+			$("#loading").addClass("hidden");
+			$("#success-box").removeClass("hidden");
+			auth.sendPasswordResetEmail(restoredEmail).then(function() {
+				// Password reset confirmation sent. Ask user to check their email.
+			}).catch(function(error) {
+				// Error encountered while sending password reset code.
+			});
+		}).catch(function(error) {
+			// Invalid code.
+			var errortext = "";
+			console.log(error);
+			switch (error.code) {
+
+				case "auth/user-not-found":
+				case "auth/user-disabled":
+					errortext = "The user to which this action code was issued from was disabled or deleted";
+					break;
+				case "auth/expired-action-code":
+					errortext = "The link given has been expired. <a href='/account/resetpassword.html'>Reset your password again</a> to get a new link."
+					break;
+				case "auth/invalid-action-code":
+					errortext = "The link given has already been used. <a href='/account/resetpassword.html'>Reset your password again</a> to get a new link."
+					break;
+				default:
+					errortext = "An unknown error occurred. (Code: " + error.code + ")";
+			}
+			if (errortext != null && errortext !== "") {
+				$("#loading").addClass("hidden");
+				$("#error-box").removeClass("hidden");
+				$(".error-title").html("Error");
+				$(".error-text").html("Error: " + errortext);
+			}
+		});
+	}
 
 </script>
 {% endblock %}
