--- a/app/account/login.html
+++ b/app/account/login.html
@@ -3,7 +3,7 @@
 
 {% block main %}
 
-<div class="row col-lg-12">
+<div class="row col-lg-12" id="main-box">
     <div class="box w-100">
         <div class="col-lg-12">
             <h2 class="primary-heading">Login</h2>
@@ -25,7 +25,18 @@
         </div>
     </div>
 </div>
+<div class="row col-lg-12 hidden" id="verify-box">
+	<div class="box w-100">
+		<div class="col-lg-12">
+			<h2 class="primary-heading">Verify your email</h2>
 
+
+			<div>
+				<p>Please <a href="/account/create.html?verifEmailOnly=true">verify your email</a> to finish setting up your account and use the website.</p>
+			</div>
+		</div>
+	</div>
+</div>
 {% endblock %}
 
 {% block scripts %}
@@ -33,11 +44,17 @@
 
 	firebase.auth().onAuthStateChanged(function(user) {
 		if (user) {
-			$("#error").html("");
-			if (getQuery("continue") == "" || getQuery("continue") == null) {
-				window.location.href = "/account/";
-			} else {
-				window.location.href = getQuery("continue");
+			if (!user.emailVerified) {
+				$("#main-box").addClass("hidden");
+				$("#verify-box").removeClass("hidden");
+            } else {
+				$("#error").html("");
+
+				if (getQuery("continue") == "" || getQuery("continue") == null) {
+					window.location.href = "/account/";
+				} else {
+					window.location.href = getQuery("continue");
+				}
 			}
 		}
 	});
